--- a/notebooks/3. Post-Hoc Explanations.ipynb
+++ b/notebooks/3. Post-Hoc Explanations.ipynb
@@ -8,11 +8,14 @@
    "source": [
     "from recoxplainer.config import cfg\n",
     "from recoxplainer.data_reader.data_reader import DataReader\n",
-    "from recoxplainer.models import GMFModel, ALS\n",
+    "from recoxplainer.models import GMFModel, ALS, EMFModel, BPR\n",
     "from recoxplainer.recommender import Recommender\n",
-    "\n",
+    "from recoxplainer.evaluator import Splitter, Evaluator\n",
     "from recoxplainer.explain import ARPostHocExplainer \n",
-    "from recoxplainer.evaluator import ExplanationEvaluator"
+    "from recoxplainer.evaluator import ExplanationEvaluator\n",
+    "from recoxplainer.models.mlp_model import MLPModel\n",
+    "import pandas as pd\n",
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
@@ -23,7 +26,9 @@
    "source": [
     "data = DataReader(**cfg.ml100k)\n",
     "data.make_consecutive_ids_in_dataset()\n",
-    "data.binarize()"
+    "data.binarize()\n",
+    "sp = Splitter()\n",
+    "train, test = sp.split_leave_n_out(data, frac=0.1)"
    ]
   },
   {
@@ -34,14 +39,23 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:OpenBLAS detected. Its highly recommend to set the environment variable 'export OPENBLAS_NUM_THREADS=1' to disable its internal multithreading\n",
+      "/Users/mac/opt/anaconda3/envs/recoxplainer/lib/python3.6/site-packages/scipy/sparse/_index.py:125: SparseEfficiencyWarning: Changing the sparsity structure of a csr_matrix is expensive. lil_matrix is more efficient.\n",
+      "  self._set_arrayXarray(i, j, x)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfd2d574c1b64d8bbee3a9b244d1d780",
+       "model_id": "582bafc9c262422783dbe59edfd4a188",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/30 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -59,8 +73,8 @@
     }
    ],
    "source": [
-    "gmf = GMFModel(**cfg.model.gmf)\n",
-    "gmf.fit(data)"
+    "als = ALS(**cfg.model.als)\n",
+    "als.fit(data)"
    ]
   },
   {
@@ -71,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e4eb51099b245ae87abe7326636fecd",
+       "model_id": "7f01d552eb83474a958857bb57e5b3ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,8 +98,92 @@
     }
    ],
    "source": [
-    "rec = Recommender(data, gmf)\n",
+    "rec = Recommender(data, als)\n",
     "recommendations = rec.recommend_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>itemId</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>404.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     userId  itemId  rank\n",
+       "161     0.0   166.0   1.0\n",
+       "7       0.0     8.0   2.0\n",
+       "85      0.0    89.0   3.0\n",
+       "387     0.0   404.0   4.0\n",
+       "128     0.0   133.0   5.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommendations.head()"
    ]
   },
   {
@@ -97,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c58176acf99e4353bdb9373baea4f567",
+       "model_id": "c5856f57d87b4443a0ba371cd8df30d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,13 +214,13 @@
     }
    ],
    "source": [
-    "ARexplainer = ARPostHocExplainer(gmf, recommendations, data)\n",
+    "ARexplainer = ARPostHocExplainer(als, recommendations, data)\n",
     "ARexpl = ARexplainer.explain_recommendations()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -154,111 +252,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>441</th>\n",
+       "      <th>161</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>463.0</td>\n",
+       "      <td>166.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>{}</td>\n",
+       "      <td>{289, 321, 291, 389, 423, 329, 10, 363, 431, 4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>273</th>\n",
+       "      <th>7</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>280.0</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>{321, 423, 329, 431, 528, 179, 86, 221}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>{512, 289, 321, 389, 423, 329, 10, 491, 432, 8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>404.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>{289, 491}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>857</th>\n",
+       "      <th>128</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>897.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>773</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>810.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1123</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1170.0</td>\n",
+       "      <td>133.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>569</th>\n",
-       "      <td>942.0</td>\n",
-       "      <td>587.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1183</th>\n",
-       "      <td>942.0</td>\n",
-       "      <td>1215.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>646</th>\n",
-       "      <td>942.0</td>\n",
-       "      <td>667.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>942.0</td>\n",
-       "      <td>272.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>942.0</td>\n",
-       "      <td>164.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>{}</td>\n",
+       "      <td>{512, 289}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9430 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      userId  itemId  rank explanations\n",
-       "441      0.0   463.0   1.0           {}\n",
-       "273      0.0   280.0   2.0   {289, 491}\n",
-       "857      0.0   897.0   3.0           {}\n",
-       "773      0.0   810.0   4.0           {}\n",
-       "1123     0.0  1170.0   5.0           {}\n",
-       "...      ...     ...   ...          ...\n",
-       "569    942.0   587.0   6.0           {}\n",
-       "1183   942.0  1215.0   7.0           {}\n",
-       "646    942.0   667.0   8.0           {}\n",
-       "258    942.0   272.0   9.0           {}\n",
-       "152    942.0   164.0  10.0           {}\n",
-       "\n",
-       "[9430 rows x 4 columns]"
+       "     userId  itemId  rank                                       explanations\n",
+       "161     0.0   166.0   1.0  {289, 321, 291, 389, 423, 329, 10, 363, 431, 4...\n",
+       "7       0.0     8.0   2.0            {321, 423, 329, 431, 528, 179, 86, 221}\n",
+       "85      0.0    89.0   3.0  {512, 289, 321, 389, 423, 329, 10, 491, 432, 8...\n",
+       "387     0.0   404.0   4.0                                         {289, 491}\n",
+       "128     0.0   133.0   5.0                                         {512, 289}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ARexpl"
+    "ARexpl.head()"
    ]
   },
   {
@@ -270,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -287,10 +334,10 @@
     {
      "data": {
       "text/plain": [
-       "0.11166489925768794"
+       "0.8094379639448539"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
